--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
 		"webpack-closure-compiler": "^2.1.6",
 		"webpack-dev-server": "^3.1.3",
 		"webpack-manifest-plugin": "^2.0.0",
-		"webpack-merge": "^4.1.1"
+		"webpack-merge": "^4.1.1",
+		"workbox-webpack-plugin": "^3.2.0"
 	},
 	"dependencies": {
 		"apollo": "^0.2.2",
